Fixed broken styles on create and edit contact form screens.

--- a/thunderchild/static/thunderchild/css_src/thunderchild.less
+++ b/thunderchild/static/thunderchild/css_src/thunderchild.less
@@ -11,7 +11,7 @@ body {
     background:none;
     overflow-y:visible;
   }
-  &.edit-entry, &.create-entry {
+  &.edit-entry, &.create-entry, &.edit-contact-form, &.create-contact-form {
     padding-top:176px;
   }
 }
